syntax = "proto3";

package protos;

message LoginRequest {
    string user_name = 1;
}

message LoginResponse {
    string token = 1;
    string user_id = 2;
}

message RegisterRequest {
    string user_name = 1;
}

message RegisterResponse {
}

message IsAuthenticatedRequest {
    string token = 1;
    string user_id = 2;
}

message IsAuthenticatedResponse {
    bool authenticated = 1;
}